# txuw-xiaoai

./: AGENTS.md  CLAUDE.md
server/: .env.example  Dockerfile  INTERACTION_PROTOCOL.md  README.md  TTS_INTEGRATION_ANALYSIS.md  pyproject.toml
server/src/txuw_xiaoai_server/: __init__.py  __main__.py  app.py  config.py  handlers.py  logging.py  socket_logging.py  transport.py
server/src/txuw_xiaoai_server/protocol/: __init__.py  models.py  parser.py
server/src/txuw_xiaoai_server/tts/: demo.py
server/src/txuw_xiaoai_server/xiaoai_handlers/: __init__.py  application.py  ports.py  sessions.py
server/src/txuw_xiaoai_server/xiaoai_handlers/agent/: __init__.py  agent.py  runtime.py
server/src/txuw_xiaoai_server/xiaoai_handlers/agent/tool/: __init__.py  (+2 more)
server/src/txuw_xiaoai_server/xiaoai_handlers/handlers/: __init__.py  dialog_lifecycle.py  query.py  speech_recognizer.py  speech_synthesizer.py
server/src/txuw_xiaoai_server/xiaoai_handlers/memory/: __init__.py  commit.py  provider.py
server/src/txuw_xiaoai_server/xiaoai_handlers/services/: __init__.py  dashscope_streaming_tts.py  legacy_audio_interrupt.py  openai_streaming_llm.py  tts_replacement_coordinator.py
server/tests/: __init__.py  dataset_utils.py  test_agent_stream_service.py  test_kws_takeover_application.py  test_memory_provider.py  test_protocol_models.py  test_region_tools.py  test_tts_replacement_application.py  test_websocket_endpoint.py  test_ws_datasets_logging.py  test_ws_datasets_protocol.py  test_ws_datasets_replay.py
server/tests/datasets/: tv_control.json  wake_only.json  weather_query.json
server/tests/manual/: streaming_tts_selftest.py
(+2 files in other folders)
